Major layout changes to pedagogy and resources, as well as a back-to-start button on the chronology. Also, heading, spacing, and format fixes across the site.

--- a/src/sass/components/footer.scss
+++ b/src/sass/components/footer.scss
@@ -1,4 +1,27 @@
 .utk-exhibits-footer {
-    background-color: $primary;
+    background-color: #273139;
     color: white;
+    display: flex;
+    flex-direction: column;
+    padding: 20px 3rem 20px;
+
+    p {
+        letter-spacing: 0.4rem;
+        text-transform: uppercase;
+        font-size: 0.8333em;
+    }
+
+    a {
+        color: white;
+        text-decoration: none;
+        padding: 5px 0;
+    }
+
+    .exhibits-copyright {
+        margin: 2em 0 0 0;
+
+        p {
+            font-size: 0.8333em;
+        }
+    }
 }
