--- a/src/sass/entity/galston/_concert-programs.scss
+++ b/src/sass/entity/galston/_concert-programs.scss
@@ -84,3 +84,7 @@
 .concert-programs-description p {
   line-height: 1.6em;
 }
+
+.concert-programs-title {
+  font-size: 1.6rem;
+}
