--- a/src/sass/entity/galston/_music-pedagogy.scss
+++ b/src/sass/entity/galston/_music-pedagogy.scss
@@ -47,6 +47,7 @@ section.exhibits-section .exhibits-blockquote {
     font-weight: 400;
     letter-spacing: -0.01em;
     margin-bottom: 0;
+    font-size: 1.3rem;
     }
 
   p {
@@ -82,4 +83,6 @@ section.exhibits-section .exhibits-blockquote {
 
 .gift-section {
   margin-top: 2rem;
+  margin-bottom: 0 !important;
+  padding-bottom: 0 !important;
 }
